--- a/examples/fix-telegram-distractions/manifest.json
+++ b/examples/fix-telegram-distractions/manifest.json
@@ -25,8 +25,8 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+U",
-        "mac": "Command+U"
+        "default": "Ctrl+Shift+U",
+        "mac": "Command+Shift+U"
       }
     },
     "open-dialog": {
